--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 
 @custom-variant dark (&:is(.dark *));
 
-* {
-  background-color: #000;
+:root {
+  --gradient: radial-gradient(circle, #e5e5e5 0%, #fff 100%);
 }
 
 @theme inline {
@@ -117,6 +117,50 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+.navbar {
+    @apply fixed w-full left-1/2 px-5 md:px-20 z-100 transition-all duration-300 ease-in-out -translate-x-1/2;
+
+    &.scrolled {
+      @apply top-1 bg-black;
+    }
+
+    &.not-scrolled {
+      @apply top-1 md:top-1 bg-transparent;
+    }
+
+    .inner {
+      @apply mx-auto flex items-center justify-between h-16 md:h-20;
+    }
+
+    .logo {
+      @apply text-white/50 text-xl md:text-2xl font-semibold hover:scale-105 transition-transform duration-300;
+    }
+
+    nav.desktop {
+      @apply hidden lg:flex items-center h-full;
+
+      ul {
+        @apply flex space-x-8 h-full items-center;
+
+        li {
+          @apply text-white/50 relative flex items-center;
+
+          span {
+            @apply transition-colors duration-300 hover:text-white;
+          }
+
+          .underline {
+            @apply absolute -bottom-1 left-0 w-0 h-0.5 bg-white transition-all duration-300 group-hover:w-full;
+          }
+        }
+      }
+    }
+
+    .nav-icons {
+      @apply hidden lg:flex items-center space-x-4 text-white text-xl;
+    }
+  }
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
@@ -125,3 +169,4 @@
     @apply bg-background text-foreground;
   }
 }
+
